--- a/AUTHDOC/composer.json
+++ b/AUTHDOC/composer.json
@@ -12,8 +12,10 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "pdfcrowd/pdfcrowd": "^5.18",
         "phpoffice/phpspreadsheet": "1.18",
-        "simplesoftwareio/simple-qrcode": "^4.2"
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "thiagoalessio/tesseract_ocr": "^2.13"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
